# pa037-compiler

./: .gitignore  BNF  LICENSE  Main.hs  README.md  compiler.cabal  compiler.nix  flake.nix  package.yaml
.github/workflows/: ci.yaml
examples/: factorial.lang  fibonacci.lang  test.lang  tictactoe.lang
src/: Ast.hs  Codegen.LLVM.hs  Codegen.hs  Helpers.hs  Main.hs  Parser.hs  Printer.hs  Semer.hs
src/Codegen/: LLVM.hs
tests/: ParserSpec.hs  SemerSpec.hs  test.hs
tests/Parser/: Tests.hs
