name: compiler
version: 0.0.1
synopsis: Simple compiler for PA037 course
license: MIT
license-file: LICENSE
author: Jan Tojnar
maintainer: jtojnar@gmail.com
category: Language
build-type: Simple
cabal-version: >=1.10

executable compiler
  main-is: Main.hs
  other-modules:
    Ast, Parser
  build-depends:
    base >=4.10 && <4.11,
    optparse-applicative,
    parsec >= 3.1 && < 3.2,
    text
  hs-source-dirs: src
  default-language: Haskell2010
