name: compiler
version: 0.0.1
synopsis: Simple compiler for PA037 course
license: MIT
license-file: LICENSE
author: Jan Tojnar
maintainer: jtojnar@gmail.com
category: Language
build-type: Simple
cabal-version: >=1.10

executable compiler
  main-is: Main.hs
  other-modules:
    Ast, Parser
  build-depends:
    base >=4.10 && <4.11,
    megaparsec >= 6.4 && < 6.6,
    optparse-applicative,
    text
  hs-source-dirs: src
  default-language: Haskell2010

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests, src
  other-modules:
    Parser.Tests,
    Ast, Parser
  main-is: test.hs
  build-depends:
    base,
    HUnit >= 1.6 && < 1.7,
    megaparsec,
    tasty >= 1.0 && < 1.2,
    tasty-hunit >= 0.10 && < 0.11,
    text
